feat(chrome-athena): add observe machenism add fix chat (#1040)